# mono-lm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/dataset/: default.toml  demo.toml  demo_catalog.toml  large_bootstrap.toml  large_local.toml
configs/dataset/sources/: demo_sources.toml  local_dialogue.toml  local_expository.toml  local_prose.toml  local_qa.toml
configs/training/: baseline.toml  tiny.toml
examples/raw/dialogue/: dialogues.jsonl
examples/raw/expository/: battery_heat.txt  battery_heat_rephrased.txt  photosynthesis.txt
examples/raw/prose/: harbor_clock.txt  night_train.txt
examples/raw/qa/: discussions.jsonl
scripts/: bootstrap_large_raw_data.py  fetch_large_data.sh  prepare_large.sh  train_large_resume.sh
src/mono_lm/: __init__.py
src/mono_lm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mono_lm/dataset_pipeline/: __init__.py  cleaning.py  cli.py  config.py  dedup.py  filters.py  formatting.py  mixing.py  models.py  pipeline.py  reporting.py  sources.py  splitting.py  utils.py
src/mono_lm/training/: __init__.py  cli.py  config.py  corpus.py  generation.py  model.py  trainer.py  vocabulary.py
tests/: test_dataset_pipeline.py  test_training_workflow.py
