[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mono-lm"
version = "0.1.0"
description = "Dataset preparation pipeline for the mono-lm character language model project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mono-lm-dataset = "mono_lm.dataset_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
