[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mono-lm"
version = "0.1.0"
description = "Corpus building and character-level training workflow for the mono-lm project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1,<3",
]

[project.optional-dependencies]
train = [
    "torch>=2.6,<3",
]

[project.scripts]
mono-lm-dataset = "mono_lm.dataset_pipeline.cli:main"
mono-lm-train = "mono_lm.training.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
